--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -81,6 +81,10 @@ venv.bak/
 /backend/uploads/
 faiss_index.bin
 document_store.pkl
+documents.db
+*.db
+*.sqlite
+*.sqlite3
 
 # Docker
 .dockerignore
